# openai_hackthon

./: .gitignore  README.md  pyproject.toml
common/config/: config.py
common/test/: __init__.py  test_config.py  test_logger.py
common/utils/: __init__.py  git_utils.py  logger.py
workflow/core/: logger.py
workflow/llm/tool/: twitter_batch_user_search_tool.py  twitter_get_current_username_tool.py  twitter_get_user_following_tool.py  twitter_tweet_advance_search_tool.py
workflow/schema/: twitter.py
workflow/service/: code_act_agent.py  code_analyze_agent.py  code_file_agent.py  code_init_agent.py  code_run_agent.py  css_analyze_agent.py  css_apply_agent.py  css_generator_agent.py  main.py  twitter_service.py
workflow/template/: batch_user_search_result.j2  tweet_template.j2  twitter_advance_search_prompt.j2  user_template.j2
workflow/test/service/: test_twitter_service.py
workflow/test/tool/: base_tool_test.py  test_twitter_batch_user_search_tool.py  test_twitter_get_user_following_tool.py  test_twitter_tweet_advance_search_tool.py
workspace/nextjs-tailwindcss-demo-1/: package-lock.json  package.json
workspace/nextjs-tailwindcss-demo-1/app/: globals.css  page.tsx
